Fix grid issues & card icons alignment

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ isolation: isolate;
 
 body {
     font-family: "Roboto", sans-serif;
-    text-wrap: pretty;
 }
 
 /* END OF FONT */
@@ -249,6 +248,10 @@ main {
     gap: 1.25em;
 }
 
+.main-header {
+    margin-bottom: -1em;
+}
+
     /* LEFT SIDE */
     .main-l {
         display: grid;
@@ -291,7 +294,7 @@ main {
     /* RIGHT SIDE */
     .main-r {
         display: grid;
-        grid-auto-rows: auto 1fr;
+        grid-auto-rows: auto minmax(0, min-content);
         gap: 1.75em;
     }
 
@@ -316,6 +319,8 @@ main {
     border-top-right-radius: 0.5em;
     border-bottom-right-radius: 0.5em;
     /* padding: 1em; */
+
+    display: grid;
 }
 
 .card-content {
@@ -327,14 +332,13 @@ main {
 .card-text {
     grid-row: 1;
     grid-column: 1 / span 2;
-
-    text-wrap: pretty;
 }
 
 .card-icons {
     grid-row: 2;
     grid-column: 2;
     justify-self: end;
+    align-self: end;
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -349,11 +353,11 @@ main {
 .side-box {
     padding: 1em 1.5em 1.5em;
     background-color: rgba(255,254,254,255);
+    border-radius: 0.5em;
 }
 
 .info {
     padding: 1.25em 0.5em;
-    text-wrap: pretty;
 }
 
 .info:nth-of-type(2) {
